# PR-ComfyUI-ChristmasTheme-63e0cd56

./: LICENSE  README.md  pyproject.toml
ComfyUI-ChristmasTheme/: LICENSE  README.md  __init__.py
ComfyUI-ChristmasTheme/js/: aether-snow.js
ComfyUI-ChristmasTheme/js/react-integration/: comfy-react-integration.js
js/: aether-snow.js  background-themes.js  link_animations.js
js/react-integration/: comfy-react-integration.js
